--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,8 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
+    <color name="gray">#e8ebec</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="lowOrange">#FF8347</color>
+    <color name="orange">#FF7C3C</color>
 </resources>
